--- a/angular-graphql-client/package.json
+++ b/angular-graphql-client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -31,16 +32,21 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "bootstrap": "4.0.0-beta",
     "codelyzer": "~3.0.1",
+    "graphql-js-client": "^0.8.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jquery": "~3.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "popper.js": "^1.12.5",
     "protractor": "~5.1.2",
+    "tether": "~1.4.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
