--- a/angular-graphql-client/package.json
+++ b/angular-graphql-client/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.4.1", 
+    "graphql-js-client": "^0.9.1",
     "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
