--- a/react-apollo/package.json
+++ b/react-apollo/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-addons-create-fragment": "^15.5.3",
-    "react-apollo": "^1.4.2",
-    "react-dom": "^15.5.4"
+    "prop-types": "^15.6.1",
+    "react": "16.3.2",
+    "react-addons-create-fragment": "^15.6.2",
+    "react-apollo": "^2.1.4",
+    "react-dom": "16.3.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
