--- a/react-apollo/package.json
+++ b/react-apollo/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.4",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.1",
     "prop-types": "^15.6.1",
     "react": "16.3.2",
     "react-addons-create-fragment": "^15.6.2",
     "react-apollo": "^2.1.4",
+    "react-art": "^16.3.2",
     "react-dom": "16.3.2"
   },
   "devDependencies": {
