--- a/react-apollo/package.json
+++ b/react-apollo/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.4",
-    "apollo-link-context": "^1.0.8",
-    "apollo-link-http": "^1.5.4",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.1",
-    "prop-types": "^15.6.1",
-    "react": "16.3.2",
-    "react-addons-create-fragment": "^15.6.2",
-    "react-apollo": "^2.1.4",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "lodash.flowright": "^3.5.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-art": "^16.3.2",
-    "react-dom": "16.3.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "react-scripts": "1.1.4"
   },
   "scripts": {
