--- a/vue-graphql-client/package.json
+++ b/vue-graphql-client/package.json
@@ -8,25 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-beta.16",
+    "vue": "^3.0.0-rc.5",
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.16",
+    "@vue/compiler-sfc": "^3.0.0-rc.5",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
+    "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
-    "typescript": "~3.9.3",
+    "eslint-plugin-vue": "^7.0.0-beta.0",
+    "typescript": "~3.9.7",
     "vue-cli-plugin-vue-next": "~0.1.3"
   },
   "eslintConfig": {
