--- a/node-graphql-client/package.json
+++ b/node-graphql-client/package.json
@@ -1,35 +1,35 @@
 {
   "name": "node-graphql-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An example using graphql-js-client built with Node.",
   "main": "lib/app.js",
   "license": "MIT",
   "author": "Shopify Inc.",
   "dependencies": {
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "~6.13.2",
-    "babel-plugin-add-shopify-header": "~1.0.5",
-    "babel-plugin-graphql-js-client-transform": "^1.1.0",
-    "babel-preset-shopify": "~13.0.0",
-    "babel-register": "~6.11.6",
-    "body-parser": "^1.17.1",
-    "eslint": "~3.3.1",
-    "eslint-plugin-shopify": "~14.0.0",
-    "express": "^4.15.2",
-    "graphql-js-client": "^0.4.2",
-    "graphql-js-schema": "^0.5.0",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.13",
+    "@babel/register": "^7.13.8",
+    "@shopify/babel-preset": "23.4.0",
+    "@shopify/eslint-plugin": "~40.1.0",
+    "babel-plugin-add-shopify-header": "~1.0.6",
+    "babel-plugin-graphql-js-client-transform": "^1.1.1",
+    "babel-preset-shopify": "~21.0.0",
+    "eslint": "~7.23.0",
+    "express": "^4.17.1",
+    "graphql-js-client": "^0.12.0",
+    "graphql-js-schema": "^0.7.1",
     "graphql-js-schema-fetch": "^1.1.2",
-    "mocha": "~3.0.2",
-    "pug": "^2.0.0-beta11",
-    "rimraf": "^2.6.1"
+    "mocha": "^8.3.2",
+    "pug": "^3.0.2",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "prestart": "yarn build",
     "start": "node lib/app.js",
-    "test": "yarn run lint-allow-warning && mocha --compilers js:babel-register -u tdd test/index.js",
+    "test": "yarn run lint-allow-warning && mocha",
     "build": "babel -d lib/ src/",
     "lint": "eslint --max-warnings 0 -c .eslintrc.json src/ test/",
     "lint-allow-warning": "eslint -c .eslintrc.json src/ test/",
