--- a/node-graphql-client/.babelrc
+++ b/node-graphql-client/.babelrc
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "shopify/node"
-  ],
+  "presets": ["@shopify/babel-preset/web"],
   "plugins": [
     ["add-shopify-header", {"files": [ "src/index.js" ]}],
     "graphql-js-client-transform"
